--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,9 @@
 }
 
 .form_textarea {
-  @apply w-full flex rounded-lg min-h-20 mt-2 p-3 text-sm text-gray-500 outline-0  border border-slate-300;
+  @apply w-full flex rounded-lg min-h-20 mt-2 p-3 text-sm text-gray-800 placeholder:text-gray-400 outline-0  border border-slate-300 focus:border-blue-400;
 }
 
 .form_input {
-  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-500 outline-0  border border-slate-300;
+  @apply w-full flex rounded-lg mt-2 p-3 text-sm text-gray-800 placeholder:text-gray-400 outline-0  border border-slate-300 focus:border-blue-400;
 }
